# color-test

./: .gitignore  CLAUDE.md  README.md  calculate.py  download.py  download_model.py  infer_default_model.py  infer_model.py  learning_rate_analysis.py  learning_rate_data.json  model.py  optimizer.py  plot.py  prompts.py  pyproject.toml  train.py  viewer.html
