[project]
name = "color-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.52.3",
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "nbclassic>=1.3.1",
    "torch>=2.7.0",
    "ipywidgets>=8.1.7",
    "accelerate>=1.7.0",
]
